// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docstring default value 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/**
 * string
 * 
 * @default \\"this is the default value\\"
 */
/**
 * boolean
 * 
 * @default false no no no
 */
/**
 * number
 * 
 * @default 1234
 */
/**
 * array
 * 
 * @default [1,2,3,\\"hello\\"] this is an array
 */
/**
 * just description
 * 
 * @default - no default value but there is a desc
 */"
`;

exports[`docstring multiline summary 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/**
 * summary
 * line2
 * line3
 */"
`;

exports[`docstring summary + remarks 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/**
 * summary
 * 
 * Hello, world this is awesome
 * another remakrs section
 */"
`;

exports[`docstring summary only 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/**
 * summary
 */"
`;

exports[`docstring tags 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/**
 * summary
 * line2
 * line3
 * 
 * @param foo	bar
 * @returns Hello world
 * @default boom boom
 * @param zoo	zar newlinx
 */"
`;

exports[`line comment 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

// another comment
  // indented comment"
`;
